--- a/Debugassignment.html
+++ b/Debugassignment.html
@@ -2,6 +2,11 @@
 <html>
 <style>
     h3 {text-align: center}
+    img {
+        border-style:dashed;
+        border-width: 2px;
+        border-color: red;
+    }
 </style>
     <header>
         <title>This is the Title</title>
@@ -13,12 +18,12 @@
         <h1> This is the Heading 1</h1>
         <h2> This is the Heading 2 element</h2>
         <p><b>I am a bold student of The Tech Academy.</b></p>
-        <p><a href="learncodinganywhere.com/"> This is The Tech Academy's website.</a></p>
+        <p><a href="https://www.learncodinganywhere.com/"> This is The Tech Academy's website.</a></p>
 
-        <img src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png" alt="The Tech Academy Logo" width="1200px"; height="400px">
-        <h3>Have you seen The Tech Academy's Student Orientation video?</h3<
+        <img src="https://www.learncodinganywhere.com/images/tech_logo/The%20Tech%20Academy%20Logo.png" alt="The Tech Academy Logo" width="600px"; height="300px">
+        <h3>Have you seen The Tech Academy's Student Orientation video?</h3>
 
-            <iframe src=”https://ttamediaservices-uswe.streaming.media.azure.net/04ce32f6-b9fa-4e02-8c47-3e5632d92a41/html_intro_final.mp4” width="560" height="315" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://ttamediaservices-uswe.streaming.media.azure.net/04ce32f6-b9fa-4e02-8c47-3e5632d92a41/html_intro_final.mp4" width="560" height="315" frameborder="0" allowfullscreen></iframe>
         
      </body>
 
